--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ p {
   margin-bottom: 0;
 }
 img {
-  display: block;
   max-width: 100%;
   height:auto;
 }
@@ -200,11 +199,18 @@ body {
   margin-right:237px;
   list-style: none;
 }
+.mob-header-link {
+  font-weight: 500;
+  position: relative;
+  color: var(--secondary-text-color);
+  transition: color 250ms cubic-bezier(0.4 , 0 , 0.2 , 1);
+  list-style: none;
+  text-decoration: none;
+}
 .mob-menu-list-item:not(:last-child) {
   padding-bottom: 40px;
 }
-.mob-menu-list:hover , 
-.mob-menu-list:focus {
+.is-active {
   color:var(--items-active-color);
 }
 .mob-menu-contacts {
@@ -219,22 +225,49 @@ body {
 }
 .mob-contacts {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  /* identical to box height, or 120% */
+  
+  letter-spacing: 0.02em;
+  
+  /* SLATE */
+  
+  color: #434455;
+  text-decoration: none;
 }
+/* .contacts-item:not(:last-child) {
+  padding-bottom: 40px;
+} */
 .hero {
   text-align: center;
 }
+.is-active {
+  width: 337px;
+height: 40px;
 
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+line-height: 40px;
+/* identical to box height, or 111% */
+
+text-transform: capitalize;
+
+/* IRIS */
+
+color: #4D5AE5;
+}
 .hero-title {
   color: var(--btn-hero-color);
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  width: 496px;
+  width: 318px;
   margin-bottom: 48px;
   margin-left: auto;
   margin-right: auto;
@@ -250,6 +283,7 @@ line-height: 24px;
 }
 .img-list {
   padding-bottom: 120px;
+  display: none;
 }
 .descr {
   color: var(--secondary-text-color);
@@ -281,8 +315,22 @@ line-height: 24px;
   padding-top: 188px;
   padding-bottom: 188px;
   background-color: var(--secondary-text-color);
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) ,url(../images/people-office\ 1.png);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) ,url(../images/hero-mob1.png);
   background-size: cover;
+}
+@media (min-devise-pixel-ratio:1),
+(mmin-resolution:96dpi),
+(min-resolution:1ddpx) {
+  .hero {
+    background-image: url("../images/hero-mob2.png");
+  }
+}
+@media (min-devise-pixel-ratio:2),
+(mmin-resolution:192dpi),
+(min-resolution:2ddpx) {
+  .hero {
+    background-image: url("../images/hero-mob2.png");
+  }
 }
 .team {
   background-color: var(--teaam-section-color);
@@ -290,12 +338,15 @@ line-height: 24px;
   padding-bottom: 120px;
 }
 .team-list {
-  display: flex;
+  flex-direction: column;
   gap: 24px;
 }
 .team-item {
   background-color: var(--btn-hero-color);
   text-align: center;
+}
+.team-item:not(:last-child) {
+  margin-bottom: 72px;
 }
 .social-list-link {
   width: 40px;
@@ -320,20 +371,29 @@ line-height: 24px;
   padding-bottom: 120px;
 }
 .advantages {
-  display: flex;
   gap: 24px;
+  margin-top: 96px;
 }
 .advantages-item {
   flex-basis: calc((100%-72px) / 4);
+  margin-top:72px;
 }
 
 .advantages-descr {
-  margin-top:8px;
-  margin-bottom: 8px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
   color:var(--secondary-text-color);
+  text-align: center;
+
+}
+/* .advantages-descr:not(:first-child) {
+ padding-top: 72px;
+} */
+.advantages-descr:not(:last-child) {
+  padding-bottom: 8px;
 }
 .example-pictures {
   display: flex;
@@ -494,11 +554,11 @@ line-height: 24px;
 }
 .advantages-link {
   background-color: var(--teaam-section-color);
-  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
   height: 112px;
+  display:none;
 }
 .advantages-link-item {
   height: 64px;
@@ -835,6 +895,16 @@ line-height: 24px;
     max-width:426px;
     outline: #2e2f42 solid 2px;
   }
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) ,url(../images/hero-mob1.png);
+  }
+  .hero-title {
+    width: 318px;
+}
+.advantages {
+  display: none;
+}
+
 }
 /* tablet */
 @media screen and (min-width: 768px) {
@@ -860,7 +930,30 @@ line-height: 24px;
   .mob-menu {
     display:none ;
   }
-}
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) ,url(../images/hero-mob1.png);
+  }
+  .advantages {
+    display: flex;
+    gap: 24px;
+  }
+  .advantages-link {
+    display:flex;
+  }
+  .advantages-item {
+    flex-basis: calc((100%-72px) / 2);}
+    .img-list {
+      display: block;
+    }
+    .team-list {
+      display: flex;
+      flex-direction:row;
+    }
+    img {
+      display: block;
+    }
+  }
+
 
 /* desktop */
 @media screen and (min-width: 1200px) {
@@ -885,4 +978,38 @@ line-height: 24px;
   .mob-menu {
     display:none ;
   }
+  .hero-title {
+    width: 500px;
+  }
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) ,url(../images/people-office.png);
+  }
+  .advantages {
+    display: flex;
+    gap: 24px;
+  }
+  .advantages-link {
+    display:flex;
+  }
+  .advantages-descr {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 8px;
+  }
+  .advantages-item {
+    flex-basis: calc((100%-72px) / 4);
+}
+.img-list {
+  display: block;
+}
+.team-list {
+  display: flex;
+  flex-direction:row;
+}
+img {
+  display: block;
+}
 }
