--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ body {
 }
 .container {
   width: 100%;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
