--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ body {
 }
 .footer-descr {
   color: var(--footer-text-color);
-  width:268px;
+  text-align: center;
 }
 
 /* BUTTON */
@@ -378,10 +378,6 @@ color: #4D5AE5;
 .advantages {
   gap: 24px;
 }
-.advantages-item {
-  flex-basis: calc((100%-72px) / 4);
-  margin-top:72px;
-}
 
 .advantages-descr {
   font-family: 'Roboto';
@@ -457,8 +453,8 @@ color: #4D5AE5;
   margin-bottom: 72px;
 }
 .customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  margin-top: 130px;
+  margin-bottom: 120px;
 }
 .customers-list {
   display: flex;
@@ -580,8 +576,7 @@ color: #4D5AE5;
 }
 /* nav-link */
 .footer-info {
-  display: flex;
-  flex-direction: column;
+  width:268px
 }
 .soc-media {
   margin-top: 72px;
@@ -807,6 +802,7 @@ color: #4D5AE5;
 }
 .subscribe-form {
   margin-top: 72px;
+  width: 100%;
 }
 .modal-form-submit {
   width: 169px;
@@ -920,6 +916,10 @@ display:none;
 @media screen and (min-width: 480px) {
   .container {
     max-width:428px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
   
   }
   .hero {
@@ -933,12 +933,18 @@ display:none;
   gap: 24px;
   margin-top: 0;
 }
+.advantages-item {
+  /* flex-basis: calc((100%-72px) / 4); */
+  margin-top:72px;
+}
+
 }
 /* tablet */
 @media screen and (min-width: 768px) {
   .container {
     max-width:768px;
     outline: red solid 2px;
+    display: block;
   }
   .nav-list {
     display: flex;
@@ -966,13 +972,18 @@ display:none;
   }
   .advantages {
     display: flex;
-    gap: 24px;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 736px;
+    row-gap: 74px;
   }
   .advantages-link {
     display:flex;
   }
   .advantages-item {
-    flex-basis: calc((100%-72px) / 2);}
+    width: calc((100% - 48px) / 2);
+    margin-top: 0;
+}
     .img-list {
       display: none;
     }
@@ -991,6 +1002,10 @@ display:none;
     }
     .customers-item {
       width: 168px;
+    }
+    .customers {
+      margin-top: 96px;
+      margin-bottom: 96px;
     }
     .footer-wraper {
       display:flex;
@@ -1112,9 +1127,7 @@ display:none;
   line-height: 24px;
   margin-top: 8px;
   }
-  .advantages-item {
-    flex-basis: calc((100%-72px) / 4);
-}
+
 .img-list {
   display: block;
 }
