--- a/css/style.css
+++ b/css/style.css
@@ -446,8 +446,8 @@ color: #4D5AE5;
   padding: 32px 16px;
 }
 .portfolio {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 .customers-descr {
   font-family: 'Roboto';
@@ -1105,6 +1105,24 @@ display:none;
 }
 .modal-form-chek-desc {
   font-size: 12px;
+}
+.portfolio {
+  margin-top: 64px;
+  margin-bottom: 96px;
+}
+.filter-list {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  column-gap: 24px;
+  flex-wrap: wrap;
+  row-gap: 72px;
+}
+.filter-item {
+  display: flex;
+  justify-content: center;
+  width: calc((100% - 24px)/2);
+  flex-basis: inherit;
 }
 }
 
