--- a/css/style.css
+++ b/css/style.css
@@ -346,11 +346,12 @@ color: #4D5AE5;
   flex-direction: column;
   display: flex;
   align-items: center;
+  gap:24px
 }
 .team-item {
   background-color: var(--btn-hero-color);
   text-align: center;
-  width: 264px;
+  width: 100%;
 }
 
 
@@ -630,6 +631,7 @@ color: #4D5AE5;
   padding-bottom: 36px;
   padding-left: 24px;
   padding-right: 24px;
+  overflow-y: scroll;
 }
 .mob-menu {
   position: fixed;
@@ -781,7 +783,7 @@ color: #4D5AE5;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 8px;
+  font-size: 12px;
   line-height: 1.33;
   color: #757575;
   align-items: center;
@@ -954,6 +956,9 @@ display:none;
 .team-item:not(:last-child) {
   margin-bottom: 72px;
 }
+.modal-form-chek-desc {
+  font-size: 12px;
+}
 
 }
 /* tablet */
@@ -1001,6 +1006,7 @@ display:none;
 }
 .team-item {
   margin-bottom: 64px;
+  width: 264px;
 }
 .team {
   padding-top: 96px;
