--- a/css/style.css
+++ b/css/style.css
@@ -461,8 +461,8 @@ color: #4D5AE5;
   margin-bottom: 72px;
 }
 .customers {
-  margin-top: 130px;
-  margin-bottom: 120px;
+  padding-top: 130px;
+  padding-bottom: 120px;
 }
 .customers-list {
   display: flex;
@@ -607,10 +607,10 @@ color: #4D5AE5;
   transition:  opacity 250ms cubic-bezier(0.4 , 0 , 0.2 , 1),
   visibility 250ms cubic-bezier(0.4 , 0 , 0.2 , 1);
 }
-.is-open {
+/* .is-open {
   transition:  opacity 250ms cubic-bezier(0.4 , 0 , 0.2 , 1),
   visibility 250ms cubic-bezier(0.4 , 0 , 0.2 , 1);
-}
+} */
 .mob-backdrop {
   position: fixed;
   z-index: 100;
@@ -647,6 +647,8 @@ color: #4D5AE5;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition:  opacity 250ms cubic-bezier(0.4 , 0 , 0.2 , 1),
+  visibility 250ms cubic-bezier(0.4 , 0 , 0.2 , 1);
 }
 
 .mob-menu.is-open {
@@ -831,11 +833,11 @@ color: #4D5AE5;
   visibility: hidden;
   pointer-events: none;
 }
-.is-open { 
+/* .is-open { 
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
+} */
 .team-list-img-wrapper {
   position: relative;
   overflow: hidden;
@@ -958,12 +960,14 @@ display:none;
   .hero-title {
     width: 318px;
 }
+/* .customers-container {
+  max-width: 192px;
+} */
 
-
-.advantages-item {
-  /* flex-basis: calc((100%-72px) / 4); */
+/* .advantages-item {
+  flex-basis: calc((100%-72px) / 4);
   margin-top:72px;
-}
+} */
 .mob-social-list {
   display: flex;
   gap: 56px;
@@ -972,7 +976,7 @@ display:none;
   font-size: 36px;
 }
 .team-item:not(:last-child) {
-  margin-bottom: 72px;
+  gap:72px;
 }
 .modal-form-chek-desc {
   font-size: 12px;
@@ -1043,7 +1047,7 @@ display:none;
     gap:24px;
   }
   .team-item:not(:last-child) {
-  margin-bottom: 64px;
+  gap: 24px;
 }
 .team-item {
   margin-bottom: 64px;
@@ -1082,8 +1086,8 @@ display:none;
       width: 168px;
     }
     .customers {
-      margin-top: 96px;
-      margin-bottom: 96px;
+      padding-top: 96px;
+      padding-bottom: 96px;
     }
     .footer-wraper {
       display: flex;
@@ -1154,8 +1158,8 @@ display:none;
   display: none;
 }
 .advatages-list {
-  margin-top: 96px;
-  margin-bottom: 96px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .customers-link {
   width: calc((100% - 72px) / 3);
@@ -1274,8 +1278,8 @@ max-width: 586px;
     flex-wrap: nowrap;
 }
 .customers {
-  margin-top: 120px;
-  margin-bottom: 120px;
+ padding-top: 120px;
+  padding-bottom: 120px;
 }
 img {
   display: block;
@@ -1386,8 +1390,8 @@ img {
   flex-wrap: nowrap;
 }
 .advatages-list {
-  margin-top: 120px;
-    margin-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .customers-link {
   display:flex;
